Make sure JAR entry resource URLs are properly encoded